# TheTraitor

./: .gitignore  AhmetYasinCetinkaya.txt  CMakeLists.txt  Doxyfile  EnesCanBozkurt.txt  MuhammedYıldız.txt  README.md
.github/workflows/: cmake-multi-platform.yml
ImplementationAssigment2/src/: Battery.cpp  Battery.h  BatteryPack.cpp  BatteryPack.h  BatteryTest.cpp
ImplementationAssigment3/: Battery.cpp  BatteryPack.h  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
ImplementationAssigment3Group19/: Battery.h  BatteryPack.cpp  QUICKSTART.md  README.md
ImplementationAssigment3Group19/.qtcreator/: CMakeLists.txt.user.584e34b
ImplementationAssignment2/: README.md
ImplementationAssignment2/src/: Battery.h  BatteryPack.cpp  BatteryPack.h  BatteryTest.cpp
assets/coordinates/: africa.txt
docs/html/: _action_packet_8h.html  _action_packet_8h.js  _action_packet_8h__dep__incl.map  _action_packet_8h__dep__incl.md5  _action_packet_8h_source.html  _action_phase_8cpp.html  _action_phase_8cpp.js  _action_phase_8cpp__incl.map  _action_phase_8cpp__incl.md5  _action_phase_8h.html  _action_phase_8h.js  _action_phase_8h__dep__incl.map  _action_phase_8h__dep__incl.md5  _action_phase_8h__incl.map  _action_phase_8h__incl.md5  _action_phase_8h_source.html  _actions_8cpp.html  _actions_8cpp__incl.map  _actions_8cpp__incl.md5  _actions_8h.html  _actions_8h.js  _actions_8h__dep__incl.map  _actions_8h__dep__incl.md5  _actions_8h__incl.map  _actions_8h__incl.md5  _actions_8h_source.html  _bridge_types_8h.html  _bridge_types_8h.js  _bridge_types_8h__dep__incl.map  _bridge_types_8h__dep__incl.md5  _bridge_types_8h__incl.map  _bridge_types_8h__incl.md5  _bridge_types_8h_source.html  _button_8cpp.html  _button_8cpp__incl.map  _button_8cpp__incl.md5  _button_8h.html  _button_8h.js  _button_8h__dep__incl.map  _button_8h__dep__incl.md5  (+610 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  enums_0.js  (+66 more)
docs/latex/: _action_packet_8h.tex  _action_packet_8h__dep__incl.md5  _action_packet_8h_source.tex  _action_phase_8cpp.tex  _action_phase_8cpp__incl.md5  _action_phase_8h.tex  _action_phase_8h__dep__incl.md5  _action_phase_8h__incl.md5  _action_phase_8h_source.tex  _actions_8cpp.tex  _actions_8cpp__incl.md5  _actions_8h.tex  _actions_8h__dep__incl.md5  _actions_8h__incl.md5  _actions_8h_source.tex  _bridge_types_8h.tex  _bridge_types_8h__dep__incl.md5  _bridge_types_8h__incl.md5  _bridge_types_8h_source.tex  _button_8cpp.tex  _button_8cpp__incl.md5  _button_8h.tex  _button_8h__dep__incl.md5  _button_8h__incl.md5  _button_8h_source.tex  _client_app_8cpp.tex  _client_app_8cpp__incl.md5  _client_app_8h.tex  _client_app_8h__dep__incl.md5  _client_app_8h__incl.md5  _client_app_8h_source.tex  _client_main_8cpp.tex  _client_main_8cpp__incl.md5  _client_main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  _country_8cpp.tex  _country_8cpp__incl.md5  _country_8h.tex  _country_8h__dep__incl.md5  _country_8h__incl.md5  _country_8h_source.tex  (+256 more)
src/: Action.cpp  Action.h  ActionPacket.h  BatteryPack.cpp  Button.cpp  Button.h  ClientApp.cpp  ClientApp.h  ClientMain.cpp  CommonTypes.h  Country.cpp  Country.h  DestroySchool.cpp  DestroySchool.h  GameHost.cpp  GameHost.h  GameManager.cpp  GameManager.h  GameState.h  GameView.cpp  GameView.h  GlobalGameState.h  HealthAid.cpp  HealthAid.h  Innocent.cpp  Innocent.h  InputHandler.cpp  InputHandler.h  JointResearch.cpp  JointResearch.h  Packet.cpp  Packet.h  PacketType.cpp  PacketType.h  Phase.cpp  Player.cpp  Player.h  PoisonResources.cpp  PoisonResources.h  PolygonData.h  (+19 more)
src/Client/: BridgeTypes.h  Button.cpp  Button.h  ClientApp.cpp  ClientApp.h  ClientMain.cpp  GameView.cpp  GameView.h  InputHandler.cpp  InputHandler.h  PolygonData.h
src/Client/Phases/: ActionPhase.cpp  ActionPhase.h  DiscussionPhase.cpp  DiscussionPhase.h  GameoverPhase.cpp  GameoverPhase.h  IGamePhase.h  LobbyPhase.cpp  LobbyPhase.h  MenuPhase.cpp  MenuPhase.h  ResolutionPhase.cpp  ResolutionPhase.h  WinPhase.cpp  WinPhase.h
src/Common/: ActionPacket.h  Actions.cpp  Actions.h  Country.cpp  Country.h  GameState.h  GlobalGameState.h  PacketType.cpp  PacketType.h  Phase.h  Player.cpp  Player.h  Role.cpp  Role.h
src/Server/: GameHost.cpp  GameHost.h  GameManager.cpp  GameManager.h
